2013-07-03
==========
Added a shield to DrunkInvader's ship.
New FrameRate class to keep a consistent frame rate, inspired by Simon Lucas.

Milestone
=========
Its exactly one year since I started writing Itchy (only about 2 months actually writing it - a 10 month gap).
I'm very happy with progress. Writing games in Itchy is very nice. It easy to get something smart
up and running very quickly.
The editor needs a LOT of polish.

2013-07-02
==========
Used eclipse's Clean Up to tidy up all of the code.
Refactored Property, so that sub classes of Behaviour don't need to use generics. 
Actors in a scene can delay being activated. Used this for the mothership.
Drunkinvaders: scaled up aliens bounce with appropriate amount of mass.

2013-07-01
==========
Added "GameLoopJob" which allows game to sleep, without the nastiness of multi-threading.
Refactored AlienFactory to use sleep.
Added 'random' utilities onceEvery and oneIn.
Normalised the time units used in DrunkInvaders to seconds

2013-06-30
==========
Added MothershipBehaviour to drunkinvaders
Added new type of animation : ScaleAnimation 
Ship reload is better (reloads as soon as the previous bullet dies).

2013-06-29
==========
OMG, I assumed the game was syncing its frame rate with the monitor frame rate.
It wasn't, instead, it was going as fast as the CPU could manage, which is what made it
appear as though my laptop wasn't fast enough to run the game. (It was running at 250 fps).
Added a simplistic delay to the game loop so each frame is takes a consistant amount of time,
and adjusted all of the drunkinvaders timings to take reflect the new frame rate. 


2012-08-14
==========
Changed all float attributes to doubles.
Refactored the guis listeners
Added Text tool to the editor, save and load. (can't change the text yet)
Added properties to the designer (x,y,alpha,direction,scale, fontsize, text )

2012-08-10 ish
==========
